# xmath

./: Cargo.toml
src/: lib.rs
src/algs/: matrix.rs  mod.rs
src/data/: aliases.rs  array.rs  basic.rs  cayley.rs  matrix.rs  mod.rs  nat.rs  poly.rs  string.rs
src/data/matrix/: array.rs  mod.rs  poly.rs
src/data/num/: int.rs  mod.rs  nat.rs  rat.rs
src/traits/: basic.rs  dim.rs  layout.rs  matrix.rs  mod.rs
xmath-core/: Cargo.toml
xmath-core/src/: lib.rs
xmath-macro/: Cargo.toml
xmath-macro/src/: derive.rs  dim.rs  lib.rs
xmath-matrix/: Cargo.toml
xmath-matrix/src/: algs.rs  array.rs  empty.rs  lib.rs  poly.rs  traits.rs  transpose.rs
xmath-traits/: Cargo.toml
xmath-traits/src/: basic.rs  dim.rs  layout.rs  lib.rs  nonzero.rs
