[package]
name = "xmath-matrix"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
xmath-core = { path = "../xmath-core" }
xmath-macro = { path = "../xmath-macro" }
xmath-traits = { path = "../xmath-traits" }